Cherry-pick 264582@main (c56a5e4e1e44). https://bugs.webkit.org/show_bug.cgi?id=238327

[GTK] Scrollbar jumps to top when drag released outside window
    https://bugs.webkit.org/show_bug.cgi?id=238327

    Reviewed by Carlos Garcia Campos.

    The scroll position jumps to the top of the window because we synthesize
    a motion event at coordinates (-1, -1) to indicate the pointer has left
    the web view. Instead, let's pick coordinates that are just outside the
    view and close to the last known position of the pointer within the
    view.

    * Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
    (webkitWebViewBaseLeave):

    Canonical link: https://commits.webkit.org/264582@main

Canonical link: https://commits.webkit.org/260527.365@webkitglib/2.40